Style scoring modal content and fix remaining modal layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,6 @@ button:disabled {
 }
 
 
-.modal-wrap {
+/* .modal-wrap {
   height: 100%;
-}
+} */
